--- a/style.css
+++ b/style.css
@@ -60,6 +60,70 @@ body {
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
+.controls__colors .openModal {
+  font-size: 45px;
+  font-weight: 600;
+  color: gray;
+  cursor: pointer;
+}
+
+.controls__colors .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.controls__colors .hidden {
+  display: none;
+}
+
+.controls__colors .modal__overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.controls__colors .modal__content {
+  background-color: white;
+  padding: 50px 50px;
+  text-align: center;
+  border-radius: 5px;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  top: 0px;
+}
+
+.controls__colors .color_box {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.controls__colors .color {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.controls__colors .closeBtn {
+  margin-top: 40px;
+  font-size: 23px;
+  cursor: pointer;
+}
+
+.controls__colors #eraiser {
+  width: 50px;
+  height: 50px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
 .controls .controls__range {
   margin-bottom: 30px;
 }
